--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,6 @@ body {
 }
 
 .title {
-    display: inline-block;
     font-size: 2.5rem;
     font-weight: 600;
 }
@@ -142,6 +141,9 @@ body {
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
     .main {
         width: 50vh;
+    }
+    .title {
+        font-size: 2rem;
     }
 
     .todos {
