fixed for mobile screen

--- a/css/style.css
+++ b/css/style.css
@@ -142,8 +142,9 @@ body {
     .main {
         width: 50vh;
     }
-    .title {
-        font-size: 2rem;
+
+    .tomato {
+        display: none;
     }
 
     .todos {
