--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,6 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 40vh;
-    min-width: 40vw;
     position: relative;
 }
 
@@ -141,20 +140,20 @@ body {
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
 
-    .main {
-        width: 50vh;
+    body {
+        margin: 0;
+        padding: 0;
     }
+
 
     .tomato {
         display: none;
     }
 
     .todos {
-        width: 40vh;
-    }
-    .todos {
         padding: 0.5rem;
     }
+   
     .trash-btn, .complete-btn  {
         font-size: 1rem;
     }
