added important feature

--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,16 @@ body {
     transition: all 0.5s ease;
 }
 
+.important-btn {
+    margin: 0.5rem;
+    color: #F8BA02;
+    transition: all 0.5s ease;
+}
+
+.important-btn:hover {
+    cursor: pointer;
+    transform: rotateZ(80deg);
+}
 
 .trash-btn:hover {
     background: #eb4559;
@@ -123,9 +133,10 @@ body {
     color: white;
 }
 
-.fa-trash, .fa-check {
+.fa-trash, .fa-check, .fa-star {
     pointer-events: none;
 }
+
 
 .todo-complete {
     text-decoration: line-through;
